# TradingAPIs

./: LICENSE  README.md
Go lang/: LocalURLofAPI.xlsx  ProjectRequirement.txt  README.md  Readme.txt
Go lang/IIFL/: conf.json  go.mod  go.sum  main.go
IIFLapis/: .travis.yml  AUTHORS.rst  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  mkdocs.yml  setup.cfg  setup.py  tox.ini
IIFLapis/.github/: ISSUE_TEMPLATE.md
IIFLapis/IIFLapis/: IIFLapis.py  __init__.py  conf.py  const.py  order.py
IIFLapis/docs/: index.md  installation.md
IIFLapis/tests/: __init__.py  test_IIFLapis.py
NodeJS/: .env.example  Backoffapis.js  README.md  config.js  cookie.txt  encry.js  index.js  openApiExamples.js  package.json
PHP/: LICENSE  README.md  index.php  requirement.txt  router.php
PHP/Configuration/: config.php
PHP/Controllers/: AesEncyptionController.php  AuthController.php  BackoffController.php  CommanCurlController.php  MiscellaneousController.php  NetPositionController.php  OrderController.php  TradingController.php
Rust/: .env  Cargo.toml  README.md  cookies.txt
Rust/src/: main.rs
csharp/: CommonCode.cs  GeneralMethods.asmx.cs  README.md  Web.config
examples/csharp/: CommonCode.cs  README.md  Web.config
examples/vbnet/: CommonCode.vb  (+3 more)
java/: .classpath  .project  HELP.md  README.md  cookie.txt  pom.xml
postman collection/: Open APIs IIFL Securities_Dummy.postman
python/: .gitignore  Insomnia.json  Insomnia_2020-10-07.json  README.md  manage.py  readme.md  requirement.txt
vbnet/: CommonCode.vb  GeneralMethods.asmx.vb  README.md  Web.config
(+65 files in other folders)
