[package]
name = "RustIIFLFunctions"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

aes = "*"
ring = "*"
block-modes="*"
base64 = "*"
reqwest =  { version = "0.10.4", features = ["blocking", "json"] }
serde = "*"
serde_json = "*"
dotenv="*"
error-chain="*"
http="*"



